--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mocha-typescript": "^1.1.17",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
+    "ts-node": "^8.5.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
