--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "typescript": "^3.6.3"
   },
   "dependencies": {
+    "@rokkit.ts/abstract-module": "^0.1.8",
     "@rokkit.ts/dependency-injection": "^0.2.1",
-    "fs-extra": "^8.1.0"
+    "@types/sinon": "^7.5.1",
+    "fs-extra": "^8.1.0",
+    "sinon": "^8.0.1"
   },
   "husky": {
     "hooks": {
