--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.6.3",
-    "sinon": "^8.0.1"
+    "sinon": "^8.0.1",
+    "@types/sinon": "^7.5.1"
   },
   "dependencies": {
     "@rokkit.ts/abstract-module": "^0.1.8",
     "@rokkit.ts/dependency-injection": "^0.3.2",
-    "@types/sinon": "^7.5.1",
     "fs-extra": "^8.1.0"
   },
   "husky": {
