--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "mocha -r ts-node/register src/**/*.spec.ts",
     "build": "tsc --build tsconfig.json"
   },
+  "bin": {
+    "rokkit-cli": "lib/cli/index.js"
+  },
   "keywords": [
     "rokkit.ts",
     "core",
