[Jann] update homepage in package.json

--- a/package.json
+++ b/package.json
@@ -68,5 +68,5 @@
   "bugs": {
     "url": "https://github.com/rokkit-ts/rokkit.ts-core/issues"
   },
-  "homepage": "https://github.com/rokkit-ts/rokkit.ts-core#readme"
+  "homepage": "https://rokkit.dev"
 }
