--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "test": "mocha -r ts-node/register src/**/*.spec.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "build": "tsc --build tsconfig.json"
   },
   "bin": {
@@ -23,31 +24,27 @@
   "author": "Jann Deterling",
   "license": "MIT",
   "devDependencies": {
-    "@types/chai": "^4.2.3",
-    "@types/fs-extra": "^8.0.1",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.7.5",
-    "@types/sinon": "^7.5.1",
+    "@types/fs-extra": "^8.1.0",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^12.12.31",
     "@types/yargs": "^15.0.4",
-    "chai": "^4.2.0",
     "husky": "^3.0.5",
-    "mocha": "^7.1.1",
-    "mocha-typescript": "^1.1.17",
+    "jest": "^25.2.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
-    "sinon": "^8.0.1",
-    "ts-node": "^8.5.0",
+    "ts-jest": "^25.2.1",
+    "ts-node": "^8.8.1",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.8.3"
   },
   "dependencies": {
     "@rokkit.ts/abstract-module": "^0.1.8",
     "@rokkit.ts/class-declaration-resolver": "^0.2.1",
     "@rokkit.ts/dependency-injection": "^0.3.2",
     "fs-extra": "^8.1.0",
-    "yargs": "^15.1.0"
+    "yargs": "^15.3.1"
   },
   "husky": {
     "hooks": {
