--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
   "author": "Jann Deterling",
   "license": "MIT",
   "devDependencies": {
+    "@rokkit.ts/web": "^0.2.7",
     "@types/fs-extra": "^8.1.0",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^12.12.31",
+    "@types/jest": "^25.1.5",
+    "@types/node": "^12.12.34",
+    "@types/restify": "^8.4.2",
     "@types/yargs": "^15.0.4",
     "husky": "^3.0.5",
-    "jest": "^25.2.0",
+    "jest": "^25.2.6",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
-    "ts-jest": "^25.2.1",
+    "ts-jest": "^25.3.0",
     "ts-node": "^8.8.1",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
@@ -40,9 +42,9 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@rokkit.ts/abstract-module": "^0.1.8",
+    "@rokkit.ts/abstract-module": "0.1.10",
     "@rokkit.ts/class-declaration-resolver": "^0.2.1",
-    "@rokkit.ts/dependency-injection": "^0.3.2",
+    "@rokkit.ts/dependency-injection": "^0.4.0",
     "fs-extra": "^8.1.0",
     "yargs": "^15.3.1"
   },
